--- a/src/Component/Not-Found/index.css
+++ b/src/Component/Not-Found/index.css
@@ -1,4 +1,18 @@
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+html,body{
+width: 100%;
+height: 100%;
+}
+
+
+
 .not-found{
+    padding: 10px;
     width: 100%;
     height: 100vh;
     display: flex;
